# claude-remote-access

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
src/claude_remote_access/: __init__.py  server.py  ssh.py
