[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-remote-access"
version = "2026.5.20"
description = "MCP server that exposes remote filesystem and shell operations over SSH"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
claude-remote-access = "claude_remote_access.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_remote_access"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
